--- a/config/hypr/custom/keybinds.conf
+++ b/config/hypr/custom/keybinds.conf
@@ -4,6 +4,10 @@
 bind = Ctrl+Super, Slash, exec, xdg-open ~/.config/illogical-impulse/config.json # Edit shell config
 bind = Ctrl+Super+Alt, Slash, exec, xdg-open ~/.config/hypr/custom/keybinds.conf # Edit extra keybinds
 
+# App launcher with Super key (backup for quickshell)
+bind = Super, Tab, exec, pkill fuzzel || fuzzel # App launcher
+bindr = Super, Super_L, exec, pkill fuzzel || fuzzel # App launcher (Super key)
+
 # Add stuff here
 # Use #! to add an extra column on the cheatsheet
 # Use ##! to add a section in that column
